samples/ut/overloading/unsigned/ByteFail03.z2
namespace org.z2legacy.ut.overloading;

class ByteFail03 {
	def @main() {
		test(Byte.Min);
	}
	
	def test(b: Small) {
		System.Out << b.class;
	}
	
	def test(b: Float) {
		System.Out << b.class;
	}
	
	def test(b: Double) {
		System.Out << b.class;
	}
	
	def test(b: Char) {
		System.Out << b.class;
	}
	
	def test(b: PtrSize) {
		System.Out << b.class;
	}
}